Restructured files to use environmental variables.

--- a/data_loading.ipynb
+++ b/data_loading.ipynb
@@ -2,23 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import sqlalchemy as db\n",
-    "import os"
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "DB_STRING=os.getenv('DB_STRING')\n",
+    "USERNAME=os.getenv('USERNAME')\n",
+    "PASSWORD=os.getenv('PASSWORD')\n",
+    "HOSTNAME=os.getenv('HOSTNAME')\n",
+    "PORT=os.getenv('PORT')\n",
+    "DB_NAME=os.getenv('DB_NAME')\n",
+    "\n",
     "orders_table = './data/orders/orders.parquet'\n",
-    "engine = db.create_engine('postgresql://postgres:changeme123!@database-1.chdnduhjzzyo.us-west-1.rds.amazonaws.com:5432/postgres')"
+    "engine = db.create_engine(f'{DB_STRING}://{USERNAME}:{PASSWORD}@{HOSTNAME}:{PORT}/{DB_NAME}')"
    ]
   }
  ],
