Finalized logic for Airflow including validating delta functionality.

--- a/data_loading_testing.ipynb
+++ b/data_loading_testing.ipynb
@@ -2,15 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import sqlalchemy as db\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "import logging\n",
     "\n",
+    "logging.basicConfig(level=logging.DEBUG)\n",
     "load_dotenv()"
    ]
   },
@@ -24,19 +37,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DB_STRING=os.getenv('DB_STRING')\n",
-    "# USERNAME=os.getenv('USERNAME')\n",
-    "# PASSWORD=os.getenv('PASSWORD')\n",
-    "# HOSTNAME=os.getenv('HOSTNAME')\n",
-    "# PORT=os.getenv('PORT')\n",
-    "# DB_NAME=os.getenv('DB_NAME')\n",
+    "DB_STRING=os.getenv('DB_STRING')\n",
+    "USERNAME=os.getenv('USERNAME')\n",
+    "PASSWORD=os.getenv('PASSWORD')\n",
+    "HOSTNAME=os.getenv('HOSTNAME')\n",
+    "PORT=os.getenv('PORT')\n",
+    "DB_NAME=os.getenv('DB_NAME')\n",
     "\n",
-    "#orders_table = './data/orders/orders.parquet'\n",
-    "#engine = db.create_engine(f'{DB_STRING}://{USERNAME}:{PASSWORD}@{HOSTNAME}:{PORT}/{DB_NAME}')"
+    "orders_directory = '/mnt/c/Users/d.lardizabal/Downloads/etl_python_sql/data/orders/'\n",
+    "engine = db.create_engine(f'{DB_STRING}://{USERNAME}:{PASSWORD}@{HOSTNAME}:{PORT}/{DB_NAME}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Engine(postgresql://postgres:***@database-1.chdnduhjzzyo.us-west-1.rds.amazonaws.com:5432/postgres)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = './data/orders/orders_1.parquet'\n",
+    "try:\n",
+    "    orders = pd.read_parquet(file_path)\n",
+    "    orders.to_sql(\n",
+    "        'orders',\n",
+    "        engine,\n",
+    "        if_exists='replace',\n",
+    "        index=False\n",
+    "    )\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")"
    ]
   },
   {
@@ -49,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +218,7 @@
        "4       No Comment          No Comment  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +238,7 @@
        "(10, 8)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +359,7 @@
        "14       No Comment          No Comment  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +379,7 @@
        "(10, 8)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
